@@ -23,7 +23,7 @@
  */
 
 defined('MOODLE_INTERNAL') || die;
-define('DEBUG_WORDIMPORT', DEBUG_DEVELOPER);
+define('DEBUG_WORDIMPORT', DEBUG_NONE);
 
 require_once(dirname(__FILE__).'/lib.php');
 require_once(dirname(__FILE__).'/xslemulatexslt.inc');
@@ -80,7 +80,7 @@ function booktool_wordimport_import_word($wordfilename, $book, $context, $splito
     // Grab title and contents of each section.
     $chaptermatches = preg_split('#<h1>.*</h1>#isU', $htmlcontent);
     preg_match_all('#<h1>(.*)</h1>#i', $htmlcontent, $h1matches);
-    debugging(__FUNCTION__ . ":" . __LINE__ . ": n chapters = " . count($chaptermatches), DEBUG_WORDIMPORT);
+    // @codingStandardsIgnoreLine debugging(__FUNCTION__ . ":" . __LINE__ . ": n chapters = " . count($chaptermatches), DEBUG_WORDIMPORT);
 
     // If no h1 elements are present, treat the whole file as a single chapter.
     if (count($chaptermatches) == 1) {
@@ -351,51 +351,12 @@ function booktool_wordimport_convert_to_xhtml($filename, $splitonsubheadings, &$
 
 
 /**
- * EXPORT OPERATIONS
- */
-
-/**
- * Convert the HTML from a book into Word-compatible XHTML format
+ * Export book HTML into Word-compatible XHTML format
  *
  * Use an XSLT script to do the job, as it is much easier to implement this,
  * and Moodle sites are guaranteed to have an XSLT processor available (I think).
  *
- * @param array $chapters array of chapters from a book
- * @return string Word-compatible XHTML text
- */
-function booktool_wordimport_book_docfile( $chapters ) {
-    // Check that there is some content to convert into Word.
-    if (count($chapters) == 0) {
-        echo $OUTPUT->notification(get_string('nochapters', 'booktool_wordimport'));
-        return false;
-    }
-
-    $content = '';
-    foreach ($chapters as $chapter) {
-        $content .= $chapter->content;
-    }
-    return booktool_wordimport_postprocess($content);
-}   // End booktool_wordimport_book_docfile function.
-
-
-/**
- * Convert the HTML from a chapter into Word-compatible XHTML format
- *
- * @param string $content the chapter to be exported
- * @return string the contents of the chapter in Word-compatible XHTML
- */
-function booktool_wordimport_chapter_docfile($content) {
-    return booktool_wordimport_postprocess($content);
-}   // End booktool_wordimport_chapter_docfile function.
-
-
-/**
- * Convert the HTML into Word-compatible XHTML format
- *
- * Use an XSLT script to do the job, as it is much easier to implement this,
- * and Moodle sites are guaranteed to have an XSLT processor available (I think).
- *
- * @param string $content all HTML content from a book
+ * @param string $content all HTML content from a book or chapter
  * @return string Word-compatible XHTML text
  */
 function booktool_wordimport_postprocess( $content ) {
@@ -423,25 +384,18 @@ function booktool_wordimport_postprocess( $content ) {
         return false;
     }
 
-    // Create a temporary file to store the XML content to transform.
+    // Get a temporary file name for storing the book/chapter XHTML content to transform.
     if (!($tempxmlfilename = tempnam($CFG->dataroot . '/temp/', "b2w-"))) {
         echo $OUTPUT->notification(get_string('cannotopentempfile', 'booktool_wordimport', basename($tempxmlfilename)));
         return false;
     }
+    unlink($tempxmlfilename);
+    $tempxhtmlfilename = $CFG->dataroot . '/temp/' . basename($tempxmlfilename, ".tmp") . ".xhtm";
 
     // Maximise memory available so that very large files can be exported.
     raise_memory_limit(MEMORY_HUGE);
 
-    debugging(__FUNCTION__ . ":" . __LINE__ . ": content: " . substr(str_replace("\n", "", $content), 200), DEBUG_WORDIMPORT);
     $cleancontent = clean_html_text($content);
-    debugging(__FUNCTION__ . ":" . __LINE__ . ": cleancontent: " . substr(str_replace("\n", "", $cleancontent), 200), DEBUG_WORDIMPORT);
-
-    // Write the XML contents to be transformed, and also include labels data, to avoid having to use document() inside XSLT.
-    $bookxhtml = "<container>\n<book>" . $cleancontent . "</book>\n</container>";
-    if (($nbytes = file_put_contents($tempxmlfilename, $bookxhtml)) == 0) {
-        echo $OUTPUT->notification(get_string('cannotwritetotempfile', 'booktool_wordimport', basename($tempxmlfilename)));
-        return false;
-    }
 
     // Set parameters for XSLT transformation. Note that we cannot use $arguments though.
     $parameters = array (
@@ -458,25 +412,23 @@ function booktool_wordimport_postprocess( $content ) {
         'transformationfailed' => get_string('transformationfailed', 'booktool_wordimport', $xhtml2wordstylesheet2)
     );
 
-    $tempxhtmlfilename = $CFG->dataroot . '/temp/' . basename($tempxmlfilename, ".tmp") . ".xhtm";
-    // Write the intermediate (Pass 1) XHTML contents to be transformed in Pass 2, this time including the HTML template too.
-    $xhtmloutput = "<container>\n" . $bookxhtml . "\n<htmltemplate>\n" . file_get_contents($htmltemplatefilepath) .
-                 "\n</htmltemplate>\n</container>";
+    // Write the book contents and the HTML template to a file.
+    $xhtmloutput = "<container>\n<container><html xmlns='http://www.w3.org/1999/xhtml'><body>" . $cleancontent . "</body></html></container>\n<htmltemplate>\n" . 
+            file_get_contents($htmltemplatefilepath) . "\n</htmltemplate>\n</container>";
     if (($nbytes = file_put_contents($tempxhtmlfilename, $xhtmloutput)) == 0) {
         echo $OUTPUT->notification(get_string('cannotwritetotempfile', 'booktool_wordimport', basename($tempxhtmlfilename)));
         return false;
     }
 
-    // Prepare for Pass 2 XSLT transformation.
+    // Prepare for Pass 2 XSLT transformation (Pass 1 not needed because books, unlike questions, are already HTML.
     $stylesheet = __DIR__ . "/" . $xhtml2wordstylesheet2;
-    // @codingStandardsIgnoreLine debugging(__FUNCTION__ . ":" . __LINE__ . ": Run Pass 2 with stylesheet '$stylesheet'", DEBUG_WORDIMPORT);
     $xsltproc = xslt_create();
     if (!($xsltoutput = xslt_process($xsltproc, $tempxhtmlfilename, $stylesheet, null, null, $parameters))) {
         echo $OUTPUT->notification(get_string('transformationfailed', 'booktool_wordimport', $stylesheet));
         booktool_wordimport_debug_unlink($tempxhtmlfilename);
         return false;
     }
-    $xhtmlfragment = str_replace("\n", "", substr($xsltoutput, 400, 100));
+    $xhtmlfragment = str_replace("\n", "", substr($xsltoutput, 0, 400));
     booktool_wordimport_debug_unlink($tempxhtmlfilename);
 
     // Strip out any redundant namespace attributes, which XSLT on Windows seems to add.
@@ -505,8 +457,6 @@ function booktool_wordimport_postprocess( $content ) {
  * @return string
  */
  function clean_html_text($cdatastring) {
-    // @codingStandardsIgnoreLine debugging(__FUNCTION__ . "(cdatastring = \"" . substr($cdatastring, 0, 100) . "\")", DEBUG_WORDIMPORT);
-
     // Escape double minuses, which cause XSLT processing to fail.
     $cdatastring = str_replace("--", "WORDIMPORTMinusMinus", $cdatastring);
 
@@ -515,16 +465,12 @@ function booktool_wordimport_postprocess( $content ) {
     $doc->loadHTML('<?xml version="1.0" encoding="UTF-8" standalone="yes"?><html><body>' . $cdatastring . '</body></html>');
     $doc->getElementsByTagName('html')->item(0)->setAttribute('xmlns', 'http://www.w3.org/1999/xhtml');
     $xml = $doc->saveXML();
-    // @codingStandardsIgnoreLine debugging(__FUNCTION__ . ":" . __LINE__ . ": xml: |" . substr(str_replace("\n", "", $xml), 250) . "|", DEBUG_WORDIMPORT);
 
     $bodystart = stripos($xml, '<body>') + strlen('<body>');
     $bodylength = strripos($xml, '</body>') - $bodystart;
-    // @codingStandardsIgnoreLine debugging(__FUNCTION__ . ":" . __LINE__ . ": bodystart = {$bodystart}, bodylength = {$bodylength}", DEBUG_WORDIMPORT);
     if ($bodystart || $bodylength) {
         $cleanxhtml = substr($xml, $bodystart, $bodylength);
-        // @codingStandardsIgnoreLine debugging(__FUNCTION__ . ":" . __LINE__ . ": clean xhtml: |" . $cleanxhtml . "|", DEBUG_WORDIMPORT);
     } else {
-        // @codingStandardsIgnoreLine debugging(__FUNCTION__ . "() -> Invalid XHTML, using original cdata string", DEBUG_WORDIMPORT);
         $cleanxhtml = $cdatastring;
     }
 
@@ -547,7 +493,6 @@ function booktool_wordimport_postprocess( $content ) {
     // Strip soft hyphens (0xAD, or decimal 173).
     $cleanxhtml = preg_replace('/\xad/u', '', $cleanxhtml);
 
-    // @codingStandardsIgnoreLine debugging(__FUNCTION__ . "() -> |" . str_replace("\n", "", substr($cleanxhtml, 0, 100)) . " ...|", DEBUG_WORDIMPORT);
     return $cleanxhtml;
 }
 
