@@ -24,11 +24,11 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version = 2016020601;
+$plugin->version = 2016020602;
 $plugin->requires = 2012062500;
 $plugin->component = 'booktool_wordimport';
 $plugin->maturity = MATURITY_BETA;
-$plugin->release = '0.9.4 (Build: 20160206)';
+$plugin->release = '0.9.5 (Build: 20160206)';
 
 $plugin->dependencies = array(
     'booktool_importhtml'     => 2012061700,
