@@ -17,8 +17,8 @@
 
  * XSLT stylesheet to wrap questions formatted as HTML tables with a Word-compatible wrapper that defines the styles, metadata, etc.
  *
- * @package    qformat_wordtable
- * @copyright  2010-2015 Eoin Campbell
+ * @package    booktool_wordimport
+ * @copyright  2016 Eoin Campbell
  * @author     Eoin Campbell
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later (5)
 -->
@@ -184,19 +184,13 @@
 
 <xsl:template match="processing-instruction('replace')[.='insert-meta']">
     <!-- Include custom properties used by Moodle2Word Startup Word template and re-import code -->
-    <o:DC.Type><xsl:value-of select="'Question'"/></o:DC.Type>
-    <o:moodleCategory><xsl:value-of select="$moodle_labels/data[@name = 'moodle_categoryname']"/></o:moodleCategory>
+    <o:DC.Type><xsl:value-of select="'Book'"/></o:DC.Type>
     <o:moodleCourseID><xsl:value-of select="$course_id"/></o:moodleCourseID>
     <o:moodleImages><xsl:value-of select="$contains_embedded_images"/></o:moodleImages>
     <o:moodleLanguage><xsl:value-of select="$moodle_language"/></o:moodleLanguage>
-    <o:moodleNo><xsl:value-of select="$moodle_labels/data[@name = 'moodle_no']"/></o:moodleNo>
-    <o:moodleQuestion><xsl:value-of select="$moodle_labels/data[@name = 'moodle_question']"/></o:moodleQuestion>
-    <o:moodleYes><xsl:value-of select="$moodle_labels/data[@name = 'moodle_yes']"/></o:moodleYes>
-    <o:moodleQuestionSeqNum><xsl:value-of select="count($data//htm:table) + 1"/></o:moodleQuestionSeqNum>
     <o:moodleRelease><xsl:value-of select="$moodle_release"/></o:moodleRelease>
     <o:moodleURL><xsl:value-of select="$moodle_url"/></o:moodleURL>
     <o:moodleUsername><xsl:value-of select="$moodle_username"/></o:moodleUsername>
-    <o:yawcToolbarBehaviour><xsl:value-of select="'doNothing'"/></o:yawcToolbarBehaviour>
 </xsl:template>
 
 <xsl:template match="processing-instruction('replace')[.='insert-language']">
